# RAI

./: .dockerignore  .gitignore  AGENTS.md  README.md  agents.yaml  pyproject.toml  release.md
.github/workflows/: publish-docker-image.yml  python-publish.yml
docker/: Dockerfile  README.md
examples/: 01_pentest_agent.py  02_sast_scanner.py  03_red_team_parallel.py  04_bug_bounty_hunter.py  05_cloud_audit.py  06_ctf_solver.py  07_custom_middleware.py  08_minimal_custom.py  09_sdk_cookbook.py  10_threat_modeling.py  11_tui_custom_agent.py  12_tui_multi_agent.py  13_builtin_subagents.py  14_custom_subagents.py  15_async_compiled_subagents.py
rai/: rai.py
src/rai/: __init__.py  __main__.py  serve.py
src/rai/agents/: __init__.py  background.py  loader.py  parser.py
src/rai/cli/: __init__.py  explorer.py  http_server.py  main.py  refs.py  serve.py
src/rai/client/: __init__.py  _config.py  _events.py  _sse.py  _transport.py  _types.py  agents.py  pipelines.py  runs.py  runtime.py  subagents.py  system.py  tasks.py  threads.py
src/rai/config/: __init__.py  agent.py  settings.py
src/rai/data/opplan_templates/: api-security.json  bug-bounty.json  cloud-security.json  custom.json  dast.json  pentesting.json  red-team.json  sast.json  threat-modeling.json
src/rai/data/references/: __init__.py  cache.py  cve_poc_index.py  h1_corpus.py  killchain.py  killchain.yaml  methodology.py  oneliners.py
src/rai/defaults/: __init__.py  agents.py  skills.py
src/rai/dev/: __init__.py  dev_log.py
src/rai/engine/: __init__.py  factory.py  model.py  runner.py  watcher.py
src/rai/engine/opplan/: __init__.py  schemas.py
src/rai/harness/: __init__.py  app.py  models.py  runner.py  selflearn.py  sse.py  tasks.py
src/rai/harness/plan/: __init__.py  tools.py
src/rai/harness/routes/: __init__.py  agents.py  hitl.py  notifications.py  pipelines.py  runs.py  runtime.py  system.py  tasks.py  threads.py
src/rai/harness/subagents/: __init__.py  executor.py  registry.py  routes.py  tools.py
src/rai/hooks/: __init__.py  runner.py
src/rai/mcp/: __init__.py  config.py  loader.py  session.py
src/rai/middleware/: __init__.py  audit.py  cache_split.py  cache_ttl.py  compression.py  execute.py  findings.py  hooks.py  loop_detection.py  memory.py  message_cache.py  model_logger.py  model_override.py  opplan.py  plan_mode.py  prompt_cache.py  ratelimit.py  request_inspector.py  rtk.py  sanitizer.py  tool_compaction.py
src/rai/sdk/: __init__.py
src/rai/sdk/agent/: __init__.py  agent.py
src/rai/sdk/builder/: __init__.py  builder.py
src/rai/sdk/client/: __init__.py  client.py
src/rai/sdk/mcp/: mcp.py  (+1 more)
src/rai/sessions/: __init__.py  store.py  tasks.py
src/rai/skills/: __init__.py  commands.py  discovery.py  invocation.py
src/rai/tools/: __init__.py
src/rai/tui/: __init__.py  app.py  app.tcss  history.py  runner.py  themes.py
src/rai/update/: __init__.py  update.py
tests/: test_agentic_loop.py
(+69 files in other folders)
